2000-10-16  Joseph S. Myers  <jsm28@cam.ac.uk>

	* c-common.c (format_check_results): New structure.
	(finish_dollar_format_checking): Adjust to take a
	format_check_results * parameter.
	(check_format_info, check_format_info_recurse,
	check_format_info_main): Split check_format_info into three
	functions, the main checking going in check_format_info_main.
	Recurse when any reduction of the format string argument towards a
	string literal is done; go down both branches of a conditional
	expression.  Don't warn for extra format arguments or empty format
	strings if they only occur in some branches of a conditional
	expression.

2000-10-16  Kazu Hirata  <kazu@hxi.com>

	* config/h8300/h8300.c: Remove obstack.

2000-10-16  Jakub Jelinek  <jakub@redhat.com>

	* rtlanal.c (may_trap_p): Check operand modes of COMPARE.

2000-10-15  Diego Novillo  <dnovillo@cygnus.com>

	* i386.md (*movsi_or): Switch operand order for intel syntax.

2000-10-14  Joseph S. Myers  <jsm28@cam.ac.uk>

	* PROBLEMS: Remove.

	* gcc.texi (Contributing): Update.

2000-10-13  Alexandre Oliva  <aoliva@redhat.com>

	* c-common.c (c_expand_builtin): PARAMS-ize prototype.

2000-10-12  Marek Michalkiewicz  <marekm@linux.org.pl>

	* config/avr/avr.c (output_movhi, output_movsisf): Fix loading
	constants 1 and 2 to NO_LD_REGS.

2000-10-13  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* Makefile.in (c-parse.c, tradcif.c): Create atomically.
	
	* objc/Make-lang.in (objc-parse.c): Likewise.

2000-10-13  Richard Earnshaw <rearnsha@arm.com>

	* arm.c: Include obstack.h
	(minipool_obstack, minipool_startobj): Define.
	(arm_add_gc_roots): Initialize them.
	(create_fix_barrier): Use our new obstack.
	(push_minipool_barrier, push_minipool_fix): Likewise.
	(arm_reorg): Release obstack memory.

2000-10-13  Jakub Jelinek  <jakub@redhat.com>

	* config/sparc/sparc.md (nonlocal_goto_receiver): Remove.
	(prologue, exception_receiver, builtin_setjmp_receiver): New
	patterns.
	* config/sparc/sparc.h (FINALIZE_PIC): Remove.